# TES5Edit-Linux-Fork

./: .gitignore  Dockerfile  LOD_TODO.md  README.md  Sniff.dpr  Sniff.dproj  TERRAIN_BLENDING_STATUS.md  TERRAIN_TEXTURE_STATUS.md  build-appimage.sh  build-windows.sh  whatsnew.md  whatsnew.rtf  xEdit.dproj
.github/workflows/: build.yml
AppDir/: AppRun  xedit.desktop
Core/: wbDataFormat.pas  wbDataFormatNif.pas  wbDataFormatNifTypes.pas  wbDefinitionsCommon.pas  wbDefinitionsFNV.pas  wbDefinitionsFO3.pas  wbDefinitionsFO4.pas  wbDefinitionsFO76.pas  wbDefinitionsSF1.pas  wbDefinitionsSignatures.pas  wbDefinitionsTES3.pas  wbDefinitionsTES4.pas  wbDefinitionsTES5.pas  wbHardcoded.dfm  wbHelpers.pas  wbImplementation.pas  wbInterface.pas  wbLOD.pas  wbLoadOrder.pas  wbMeshOptimize.pas  wbNifMath.pas
Core/Hardcoded/: Fallout76.esp
Sniff/: ProcAnalyzeMesh.pas  ProcConvertRootNode.dfm  ProcCopyGeometryBlocks.pas  ProcDismemberSkin.pas  ProcInertiaUpdate.dfm  ProcUpdateAuthor.dfm  ProcVertexPaint.pas  SniffProcessor.pas  frmMain.dfm  frmMain.pas
Sniff/Proc/: ProcAnalyzeMesh.dfm  ProcCheckForErrors.pas  ProcConvertFO3Collision.dfm  ProcConvertRootNode.pas  ProcConvertShader30.dfm  ProcConvertShader30.pas  ProcCopyGeometryBlocks.dfm  ProcDismemberSkin.dfm  ProcInertiaUpdate.pas  ProcReplaceAssets.pas  ProcShaderFlagsUpdate.dfm  ProcShaderFlagsUpdate.pas  ProcUniversalFixer.dfm  ProcUniversalFixer.pas  ProcUniversalTweaker.dfm  ProcUniversalTweaker.pas  ProcUpdateAuthor.pas  ProcVertexPaint.dfm  ProcVertexPaint.pas
lazarus-gui/: run.sh  xEditLaz.lpi  xEditLaz.lpr  xeMainFormLaz.lfm  xeMainFormLaz.pas  xedit_ffi.pas
patches/: qt6pas-remove-returnpressed-disconnect.patch  qt6pas-wayland-menu-transient-parent.patch
qt-gui/: CMakeLists.txt
qt-gui/src/: main.cpp
qt-gui/src/cache/: RecordCache.cpp  RecordCache.h
qt-gui/src/delegates/: ConflictColorDelegate.cpp  ConflictColorDelegate.h  NavColorDelegate.cpp  NavColorDelegate.h
qt-gui/src/ffi/: XEditFFI.cpp  XEditFFI.h  XEditTypes.h
qt-gui/src/forms/: DeveloperMessageDialog.cpp  DeveloperMessageDialog.h  EditWarningDialog.cpp  EditWarningDialog.h  ElementDetailDialog.cpp  ElementDetailDialog.h  FileSelectDialog.cpp  FileSelectDialog.h  FilterOptionsDialog.cpp  FilterOptionsDialog.h  LODGenDialog.cpp  LODGenDialog.h  LegendDialog.cpp  LegendDialog.h  LocalizationDialog.cpp  LocalizationDialog.h  LocalizePluginDialog.cpp  LocalizePluginDialog.h  LogAnalyzerDialog.cpp  LogAnalyzerDialog.h  MainWindow.cpp  MainWindow.h  ModGroupEditDialog.cpp  ModGroupEditDialog.h  ModGroupSelectDialog.cpp  ModGroupSelectDialog.h  ModuleSelectDialog.cpp  ModuleSelectDialog.h  OptionsDialog.cpp  OptionsDialog.h  RichEditDialog.cpp  RichEditDialog.h  ScriptDialog.cpp  ScriptDialog.h  TipDialog.cpp  TipDialog.h  ViewElementsDialog.cpp  ViewElementsDialog.h  WaitDialog.cpp  WaitDialog.h  (+2 more)
qt-gui/src/highlighting/: PascalHighlighter.cpp  PascalHighlighter.h
qt-gui/src/models/: NavTreeItem.cpp  NavTreeItem.h  NavTreeModel.cpp  NavTreeModel.h  OverrideViewModel.cpp  OverrideViewModel.h  RecordViewModel.cpp  RecordViewModel.h  RefByTableModel.cpp  RefByTableModel.h  SpreadsheetModel.cpp  SpreadsheetModel.h
qt-gui/src/util/: CommandLineArgs.h  ConflictColors.cpp  ConflictColors.h  ModGroupFile.cpp  ModGroupFile.h  SettingsManager.h  SignatureNames.cpp  SignatureNames.h  StringBuffer.h  StringTableParser.cpp  StringTableParser.h
rust-core/: Cargo.toml  test_data
rust-core/.cargo/: config.toml
rust-core/src/: lib.rs
rust-core/tests/: cross_game.rs  fuzz_targets.rs  regression.rs
rust-core/xedit_core/: Cargo.toml
rust-core/xedit_core/src/: conflicts.rs  engine.rs  lib.rs  load_order.rs
rust-core/xedit_core/src/mo2/: config.rs  mod.rs  profile.rs  vfs.rs
rust-core/xedit_dom/: Cargo.toml
rust-core/xedit_dom/src/: dialect.rs  element.rs  error.rs  formid.rs  group.rs  lib.rs  plugin.rs  record.rs  signature.rs  subrecord.rs
rust-core/xedit_ffi/: Cargo.toml
rust-core/xedit_ffi/src/: lib.rs
rust-core/xedit_games/: Cargo.toml
rust-core/xedit_games/src/: definition.rs  fnv_defs.rs  fo3_defs.rs  fo4_defs.rs  fo76_defs.rs  lib.rs  morrowind_defs.rs  registry.rs  sse_defs.rs  starfield_defs.rs  tes4_defs.rs
rust-core/xedit_io/: Cargo.toml
rust-core/xedit_io/src/: lib.rs  reader.rs  tests.rs  writer.rs
rust-core/xedit_io/tests/: real_files.rs
rust-core/xedit_lod/: Cargo.toml
rust-core/xedit_lod/src/: atlas_builder.rs  bin_packer.rs  btt_writer.rs  dds_util.rs  export_writer.rs  lib.rs  lod_settings.rs  nif_combiner.rs  objects_lod.rs  progress.rs  reference_scanner.rs  resource_loader.rs  terrain_lod.rs  trees_lod.rs
rust-core/xedit_nif/: Cargo.toml
rust-core/xedit_nif/nifly_wrapper/: CMakeLists.txt  xedit_nifly_wrapper.cpp  xedit_nifly_wrapper.h
rust-core/xedit_nif/src/: api.rs  error.rs  lib.rs  loader.rs  metadata.rs  scanner.rs  validator.rs
rust-core/xedit_nif/test_data/: test.nif
rust-core/xedit_tools/: Cargo.toml
rust-core/xedit_tools/src/: archive.rs  asset_scan.rs  cleaner.rs  lib.rs
rust-core/xedit_transpiler/: Cargo.toml
rust-core/xedit_transpiler/src/: codegen.rs  main.rs  parser.rs
xEdit/: xeFilterOptionsForm.dfm  xeFilterOptionsForm.pas  xeInit.pas  xeMainForm.dfm  xeMainForm.pas  xeOptionsForm.dfm  xeViewElementsForm.pas
xEdit/JvI/: xejviScriptAdapter.pas  xejviScriptAdapterMisc.pas  xejviScriptHost.pas
