[package]
name = "xedit_games"
description = "Game-specific record definitions for all Bethesda games"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
xedit_dom = { path = "../xedit_dom" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
