[package]
name = "xedit_lod"
description = "LOD generation for xEdit — tree, object, and terrain LOD pipelines"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Workspace crates
xedit_dom = { path = "../xedit_dom" }
xedit_core = { path = "../xedit_core" }
xedit_io = { path = "../xedit_io" }
xedit_games = { path = "../xedit_games" }
xedit_nif = { path = "../xedit_nif" }
xedit_tools = { path = "../xedit_tools" }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Binary parsing
byteorder.workspace = true

# Parallelism
rayon.workspace = true

# Serialization
serde = { workspace = true }
serde_json.workspace = true

# File operations
memmap2.workspace = true
walkdir.workspace = true

# Archives
ba2.workspace = true

# Logging
tracing.workspace = true

# Hashing
crc32fast.workspace = true

# DDS texture handling
image_dds.workspace = true
directxtex.workspace = true

# Image processing
image = "0.25"
