[package]
name = "xedit_nif"
description = "NIF mesh file handling via nifly C wrapper (mandatory dependency)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
libloading.workspace = true
tracing.workspace = true
