[package]
name = "xedit_tools"
description = "Unified tool API for BSA/BA2 archives, DDS textures, and utilities"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
xedit_dom = { path = "../xedit_dom" }
xedit_nif = { path = "../xedit_nif" }
anyhow.workspace = true
thiserror.workspace = true
ba2.workspace = true
rayon.workspace = true
walkdir.workspace = true
flate2.workspace = true
lz4_flex.workspace = true
tracing.workspace = true
